--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,41 @@
+html,
+body {
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+}
+
 .header {
+  padding: 0 1.2em;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  background-color: #1c6758;
+}
+
+.brand--name {
+  font-size: 2.7rem;
 }
 
 .header--left {
   display: flex;
   column-gap: 4em;
+}
+
+a:link {
+  color: #eef2e6;
+  text-decoration: none;
+}
+
+/* visited link */
+a:visited {
+  color: #eef2e6;
+}
+
+/* mouse over link */
+.header--left h1:hover {
+  -moz-transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
 }
