--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,6 @@ body,
   height: 100%;
 }
 
-/* img {
-  max-width: 100%;
-} */
-
 .header {
   padding: 0 1.3em;
   height: 13%;
@@ -103,14 +99,59 @@ a:visited {
   width: 100%;
 }
 
+.products--page {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 3em;
+
+  padding-top: 2em;
+}
+
 /* PRODUCT SECTION STYLING */
 
-img {
-  width: 18em;
+.product--section {
+  padding: 1.5em 1em;
+  border-radius: 8px;
+  min-width: 25em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+}
+
+.product--section img {
+  width: 75%;
   object-fit: cover;
   height: 18em;
 }
 
 .object--fit {
   object-position: right;
+}
+
+.price--cart--section {
+  display: flex;
+  align-items: center;
+  width: 75%;
+  column-gap: 1em;
+}
+
+.price--cart--section p {
+  width: 30%;
+  text-align: center;
+  font-size: larger;
+  margin: 0;
+}
+
+.price--cart--section button {
+  width: 70%;
+  background-color: black;
+  color: white;
+  font-weight: bolder;
+  font-size: 1.1rem;
+  border-radius: 8px;
+  border: none;
+  padding: 1em;
 }
