--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@ body,
   height: 100%;
 }
 
+button:hover {
+  opacity: 0.9;
+  cursor: pointer;
+}
+
 .header {
   padding: 0 1.3em;
   height: 13%;
@@ -100,11 +105,17 @@ a:visited {
 }
 
 .products--page {
-  display: flex;
-  flex-wrap: wrap;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* flex-wrap: wrap; */
+  /* column-gap: 3em;
+  padding-top: 2em; */
+  display: grid;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
   column-gap: 3em;
-
-  padding-top: 2em;
+  row-gap: 3em;
+  padding: 2em;
 }
 
 /* PRODUCT SECTION STYLING */
@@ -112,7 +123,7 @@ a:visited {
 .product--section {
   padding: 1.5em 1em;
   border-radius: 8px;
-  min-width: 25em;
+  /* min-width: 25em; */
   display: flex;
   flex-direction: column;
   align-items: center;
