--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ body,
   height: 100%;
 }
 
-button:hover {
+button:hover,
+.shop--now--link:hover {
   opacity: 0.9;
   cursor: pointer;
 }
@@ -33,10 +34,19 @@ button:hover {
   column-gap: 4em;
 }
 
+li {
+  list-style: none;
+  font-size: 1.7rem;
+}
+
 a:link,
 i {
   color: #eef2e6;
   text-decoration: none;
+}
+
+.fa-cart-shopping:hover {
+  cursor: pointer;
 }
 
 /* visited link */
@@ -45,12 +55,42 @@ a:visited {
 }
 
 /* mouse over link */
-.header--left h1:hover {
+.header--left li:hover {
   -moz-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   -o-transform: scale(1.2);
   -ms-transform: scale(1.2);
   transform: scale(1.2);
+}
+
+/* CART MODAL */
+
+.cart--modal {
+  background-color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2em;
+  -webkit-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
+  -moz-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
+  box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
+}
+
+/* .cart--modal h1 {
+  text-align: center;
+} */
+
+.checkout--btn {
+  background-color: #1c6758;
+}
+
+.close--cart--btn {
+  background-color: #e14d2a;
 }
 
 /* LANDING PAGE */
@@ -87,11 +127,6 @@ a:visited {
   border: none;
 }
 
-.shop--now--link:hover {
-  opacity: 0.85;
-  cursor: pointer;
-}
-
 .main-container {
   display: flex;
   width: 100%;
@@ -106,35 +141,31 @@ a:visited {
 }
 
 .products--page {
-  /* display: flex; */
-  /* justify-content: center; */
-  /* flex-wrap: wrap; */
-  /* column-gap: 3em;
-  padding-top: 2em; */
   display: grid;
-  /* grid-template-columns: repeat(3, 1fr); */
-  grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
   column-gap: 3em;
   row-gap: 3em;
   padding: 2em;
+  /* background-color: rgba(0, 0, 0, 0.6); */
 }
 
 /* PRODUCT SECTION STYLING */
 
-.product--section {
+.product--card {
   padding: 1.5em 1em;
   border-radius: 8px;
   /* min-width: 25em; */
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
-.product--section img {
-  width: 75%;
+.product--card img {
+  width: 100%;
   object-fit: cover;
   height: 18em;
 }
@@ -145,25 +176,33 @@ a:visited {
 
 .price--cart--section {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  width: 75%;
+  /* width: 75%; */
   column-gap: 1em;
 }
 
 .price--cart--section p {
-  width: 30%;
+  width: 20%;
   text-align: center;
   font-size: larger;
   margin: 0;
 }
 
-.price--cart--section button {
-  width: 70%;
-  background-color: black;
+button {
+  width: 8em;
   color: white;
   font-weight: bolder;
   font-size: 1.1rem;
   border-radius: 8px;
   border: none;
-  padding: 1em;
+  padding: 0.7em 0.9em;
+}
+
+.add--to--cart {
+  background-color: black;
+}
+
+.remove--button {
+  background-color: #1c6758;
 }
