--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,10 @@ body,
 }
 
 button:hover,
-.shop--now--link:hover {
-  opacity: 0.9;
+.shop--now--link:hover,
+.fa-minus:hover,
+.fa-plus:hover {
+  opacity: 0.7;
   cursor: pointer;
 }
 
@@ -79,7 +81,7 @@ a:visited {
   background-color: white;
   position: absolute;
   top: 0;
-  bottom: 0;
+  /* bottom: 0; */
   right: 0;
   width: 33%;
   display: flex;
@@ -105,6 +107,54 @@ a:visited {
 
 .close--cart--btn {
   background-color: #e14d2a;
+}
+
+/* MINI PRODUCT CARD */
+
+.mini--product--card {
+  width: 100%;
+  height: 15em;
+  display: flex;
+  justify-content: center;
+
+  column-gap: 1.4em;
+}
+
+.mini--product--card img {
+  width: 40%;
+  height: 70%;
+  object-fit: cover;
+}
+
+.mini--name--price {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* .mini--name--price h3 {
+  margin-top: 0;
+} */
+
+.mini--name--price p {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.add--remove--section {
+  display: flex;
+  align-items: center;
+  column-gap: 1.5em;
+  margin-top: 3em;
+}
+
+.fa-plus,
+.fa-minus {
+  color: black;
+  background-color: #e8e2e2;
+  font-size: 1.2rem;
+  padding: 0.3em;
 }
 
 /* LANDING PAGE */
