--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ a:visited {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 2em;
+  row-gap: 1.5em;
   -webkit-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
   -moz-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
   box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
@@ -109,39 +109,43 @@ a:visited {
   background-color: #e14d2a;
 }
 
-.cart--modal h2 {
+/* .cart--modal h2 {
   margin: 0;
-}
+} */
 
 /* MINI PRODUCT CARD */
 
 .mini--product--card {
   width: 100%;
-  height: 15em;
+  height: 9em;
   display: flex;
   justify-content: center;
-
   column-gap: 1.4em;
 }
 
 .mini--product--card img {
   width: 40%;
-  height: 70%;
+  height: 100%;
   object-fit: cover;
+  /* align-self: center; */
 }
 
 .mini--name--price {
   width: 45%;
+  /* height: 70%; */
   display: flex;
   flex-direction: column;
+  row-gap: 1em;
   align-items: center;
+  justify-content: center;
 }
 
 /* .mini--name--price h3 {
   margin-top: 0;
 } */
 
-.mini--name--price p {
+.mini--name--price p,
+.mini--name--price h3 {
   font-size: 1.2rem;
   margin: 0;
 }
@@ -150,7 +154,7 @@ a:visited {
   display: flex;
   align-items: center;
   column-gap: 1.5em;
-  margin-top: 3em;
+  /* margin-top: 2em; */
 }
 
 .fa-plus,
@@ -158,7 +162,7 @@ a:visited {
   color: black;
   background-color: #e8e2e2;
   font-size: 1.2rem;
-  padding: 0.3em;
+  padding: 0.4em;
 }
 
 /* LANDING PAGE */
