--- a/src/index.css
+++ b/src/index.css
@@ -81,7 +81,7 @@ a:visited {
   background-color: white;
   position: absolute;
   top: 0;
-  /* bottom: 0; */
+  bottom: 0;
   right: 0;
   width: 33%;
   display: flex;
@@ -116,11 +116,12 @@ a:visited {
 /* MINI PRODUCT CARD */
 
 .mini--product--card {
-  width: 100%;
-  height: 9em;
+  width: 87%;
+  height: 10em;
   display: flex;
   justify-content: center;
   column-gap: 1.4em;
+  margin-bottom: 1em;
 }
 
 .mini--product--card img {
@@ -131,7 +132,7 @@ a:visited {
 }
 
 .mini--name--price {
-  width: 45%;
+  width: 60%;
   /* height: 70%; */
   display: flex;
   flex-direction: column;
