--- a/src/index.css
+++ b/src/index.css
@@ -78,19 +78,32 @@ a:visited {
 /* CART MODAL */
 
 .cart--modal {
+  min-height: 100%;
   background-color: white;
   position: absolute;
-  top: 0;
-  bottom: 0;
+  /* top: 0; */
+  /* bottom: 0; */
   right: 0;
   width: 33%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 1.5em;
+  /* row-gap: 1.5em; */
   -webkit-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
   -moz-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
   box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
+  padding-bottom: 2em;
+  width: 33%;
+  transition: transform 600ms ease-in;
+}
+
+.hidden {
+  transform: translateX(30em);
+  transition: transform 600ms ease-out;
+}
+
+.cart--modal h1 {
+  margin-bottom: 1em;
 }
 
 .button--container {
@@ -109,24 +122,22 @@ a:visited {
   background-color: #e14d2a;
 }
 
-/* .cart--modal h2 {
-  margin: 0;
-} */
-
 /* MINI PRODUCT CARD */
 
 .mini--product--card {
   width: 87%;
   height: 10em;
+  max-height: 10em;
   display: flex;
   justify-content: center;
   column-gap: 1.4em;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .mini--product--card img {
   width: 40%;
-  height: 100%;
+  min-width: 40%;
+  height: 9em;
   object-fit: cover;
   /* align-self: center; */
 }
