--- a/src/index.css
+++ b/src/index.css
@@ -78,28 +78,28 @@ a:visited {
 /* CART MODAL */
 
 .cart--modal {
-  min-height: 100%;
+  height: 70%;
   background-color: white;
   position: absolute;
   /* top: 0; */
   /* bottom: 0; */
   right: 0;
-  width: 33%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* row-gap: 1.5em; */
-  -webkit-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
-  -moz-box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
-  box-shadow: -6px 0px 10px -5px rgba(34, 60, 80, 0.47);
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   padding-bottom: 2em;
   width: 33%;
-  transition: transform 600ms ease-in;
+  transition: transform 900ms ease-in;
+  overflow-y: scroll;
 }
 
 .hidden {
-  transform: translateX(30em);
-  transition: transform 600ms ease-out;
+  transform: translateX(90em);
+  transition: transform 900ms ease-out;
 }
 
 .cart--modal h1 {
@@ -223,9 +223,11 @@ a:visited {
 .products--page {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
-  column-gap: 3em;
+
+  column-gap: 2em;
   row-gap: 3em;
   padding: 2em;
+  height: 87%;
   /* background-color: rgba(0, 0, 0, 0.6); */
 }
 
@@ -242,6 +244,7 @@ a:visited {
   -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
+  height: 70%;
 }
 
 .product--card img {
