--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body,
   margin: 0;
   font-family: "Roboto", sans-serif;
   height: 100vh;
+  width: 100vw;
 }
 
 .app {
@@ -222,8 +223,7 @@ a:visited {
 
 .products--page {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
-
+  grid-template-columns: repeat(auto-fill, minmax(17em, 1fr));
   column-gap: 2em;
   row-gap: 3em;
   padding: 2em;
@@ -292,4 +292,12 @@ a:visited {
   color: black;
   font-size: 6rem;
   margin: 0.3em;
+}
+
+@media (max-width: 650px) {
+  html,
+  body,
+  #root {
+    width: 100vw;
+  }
 }
